Add product import

--- a/bidfood_custom/views/bidfood_views.xml
+++ b/bidfood_custom/views/bidfood_views.xml
@@ -15,8 +15,6 @@
                      <group>
                         <field name="name" required="True" />
                         <field name="password" required="True" />
-                        <field name="token" />
-                        <field name="url" required="True" />
                      </group>
                   </group>
                </sheet>
@@ -43,6 +41,6 @@
          <field name="view_mode">tree,form</field>
          <field name="view_id" ref="bidfood_sale_tree_view" />
       </record>
-      <menuitem id="bidfood_sale_sequence" name="Shop2stock Sale" parent="sale.menu_sale_config" action="bidfood_sale_action" sequence="2" />
+      <menuitem id="bidfood_sale_sequence" name="BidFood Product" parent="sale.menu_sale_config" action="bidfood_sale_action" sequence="2" />
    </data>
 </odoo>
