--- a/bidfood_custom/views/bidfood_views.xml
+++ b/bidfood_custom/views/bidfood_views.xml
@@ -41,6 +41,8 @@
          <field name="view_mode">tree,form</field>
          <field name="view_id" ref="bidfood_sale_tree_view" />
       </record>
-      <menuitem id="bidfood_sale_sequence" name="BidFood Product" parent="sale.menu_sale_config" action="bidfood_sale_action" sequence="2" />
+        <menuitem id="bidfood_sale_sequence" name="BidFood GP Product" parent="point_of_sale.menu_point_of_sale" sequence="15" />
+        
+      <menuitem id="bidfood_sale_sequence_product" name="BidFood Product" parent="bidfood_custom.bidfood_sale_sequence" action="bidfood_sale_action" sequence="2" />
    </data>
 </odoo>
