--- a/bidfood_custom/views/bidfood_views.xml
+++ b/bidfood_custom/views/bidfood_views.xml
@@ -41,8 +41,49 @@
          <field name="view_mode">tree,form</field>
          <field name="view_id" ref="bidfood_sale_tree_view" />
       </record>
-        <menuitem id="bidfood_sale_sequence" name="BidFood GP Product" parent="point_of_sale.menu_point_of_sale" sequence="15" />
+        <menuitem id="bidfood_sale_sequence" name="BidFood GP Product" parent="point_of_sale.menu_point_config_product" sequence="15" />
         
       <menuitem id="bidfood_sale_sequence_product" name="BidFood Product" parent="bidfood_custom.bidfood_sale_sequence" action="bidfood_sale_action" sequence="2" />
+
+      <!-- product.big.log -->
+      <record id="product_big_log_form" model="ir.ui.view">
+         <field name="name">product.big.log.form</field>
+         <field name="model">product.big.log</field>
+         <field name="arch" type="xml">
+            <form>
+               <sheet>
+                  <group>
+                     <field name="name"/>
+                     <field name="payload"/>
+                     <field name="error"/>
+                     <field name="ttype"/>
+                     <field name="etype"/>
+                  </group>
+               </sheet>
+            </form>
+         </field>
+      </record>
+
+
+      <record id="product_big_log_tree" model="ir.ui.view">
+         <field name="name">product.big.log.tree</field>
+         <field name="model">product.big.log</field>
+         <field name="arch" type="xml">
+            <tree>
+               <field name="name" />
+               <field name="payload"/>
+               <field name="error"/>
+            </tree>
+         </field>
+      </record>
+
+      <record id="product_big_log_action" model="ir.actions.act_window">
+         <field name="name">BidFood Product Log</field>
+         <field name="res_model">product.big.log</field>
+         <field name="view_mode">tree,form</field>
+         <field name="view_id" ref="product_big_log_tree" />
+      </record>
+
+      <menuitem id="bidfood_product_big_log_menu" name="BidFood Product Log" parent="bidfood_custom.bidfood_sale_sequence" action="product_big_log_action"/>
    </data>
 </odoo>
