--- a/bidfood_custom/views/product_views.xml
+++ b/bidfood_custom/views/product_views.xml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
 
-    <record model="ir.ui.view" id="product_template_shop2stock_form_view">
-        <field name="name">product.template.shop2stock</field>
+    <record model="ir.ui.view" id="product_template_bidfoodstock_form_view">
+        <field name="name">product.template.bidfood</field>
         <field name="model">product.template</field>
         <field name="inherit_id" ref="product.product_template_form_view"/>
         <field name="arch" type="xml">
-<div name="button_box" position="inside">
-                    <button string="Update shop2stock" type="object"
-                        name="shop2shop_sale_offer"
-                        class="oe_stat_button" icon="fa-random" />
-                   
-                </div>
                 
                 
             <xpath expr="//page[@name='general_information']" position="after">
