--- a/bidfood_custom/views/bidfood_views.xml
+++ b/bidfood_custom/views/bidfood_views.xml
@@ -84,6 +84,51 @@
          <field name="view_id" ref="product_big_log_tree" />
       </record>
 
-      <menuitem id="bidfood_product_big_log_menu" name="BidFood Product Log" parent="bidfood_custom.bidfood_sale_sequence" action="product_big_log_action"/>
+      <record id="product_big_log_form" model="ir.ui.view">
+         <field name="name">product.big.form</field>
+         <field name="model">product.big</field>
+         <field name="arch" type="xml">
+            <form>
+               <sheet>
+                  <group>
+                     <field name="name"/>
+                  </group>
+                  <notebook>
+                     <page string="Logs">
+                        <field name="log_ids">
+                           <tree>
+                              <field name="name"/>
+                              <field name="payload"/>
+                              <field name="error"/>
+                              <field name="ttype"/>
+                              <field name="etype"/>
+                           </tree>
+                        </field>
+                     </page>
+                  </notebook>
+               </sheet>
+            </form>
+         </field>
+      </record>
+
+
+      <record id="product_big_tree" model="ir.ui.view">
+         <field name="name">product.big.tree</field>
+         <field name="model">product.big.log</field>
+         <field name="arch" type="xml">
+            <tree>
+               <field name="name" />
+            </tree>
+         </field>
+      </record>
+
+      <record id="product_big_action" model="ir.actions.act_window">
+         <field name="name">BidFood Product Log</field>
+         <field name="res_model">product.big</field>
+         <field name="view_mode">tree,form</field>
+         <field name="view_id" ref="product_big_tree" />
+      </record>
+
+      <menuitem id="bidfood_product_big_log_menu" name="BidFood Product Log" parent="bidfood_custom.bidfood_sale_sequence" action="product_big_action"/>
    </data>
 </odoo>
