--- a/bidfood_custom/views/product_views.xml
+++ b/bidfood_custom/views/product_views.xml
@@ -21,6 +21,15 @@
         </field>
     </record>
 
-   
-     
+    <record model="ir.ui.view" id="pos_order_bidfoodstock_form_view">
+        <field name="name">pos.order.bidfood</field>
+        <field name="model">pos.order</field>
+        <field name="inherit_id" ref="point_of_sale.view_pos_pos_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//group[@name='order_fields']//field[@name='fiscal_position_id']" position="after">
+                <field name='invoiceNumber'/>
+            </xpath>
+
+        </field>
+    </record>
 </odoo>
