--- a/bidfood_custom/views/product_views.xml
+++ b/bidfood_custom/views/product_views.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+    <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
 
     <record model="ir.ui.view" id="product_template_bidfoodstock_form_view">
@@ -14,6 +14,7 @@
                         <field name="gp_unit" />
                         <field name="creation_date" />
                         <field name="modify_date" />
+                        <field name="branch" />
                     </group>
                 </page>
             </xpath>
@@ -32,4 +33,31 @@
 
         </field>
     </record>
+
+    <record model="ir.ui.view" id="pos_config_branch_view">
+        <field name="name">pos.config.branch.view</field>
+        <field name="model">pos.config</field>
+        <field name="inherit_id" ref="point_of_sale.pos_config_view_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//div[@id='title']" position="after">
+                <div class="oe_title" id="branch">
+                    <label for="branch"/>
+                    <field name='branch' placeholder="Branch Name"/>
+                </div>
+            </xpath>
+
+        </field>
+    </record>
+
+    <!-- <record model="ir.ui.view" id="pos_session_branch_view">
+        <field name="name">pos.session.branch.view</field>
+        <field name="model">pos.session</field>
+        <field name="inherit_id" ref="point_of_sale.pos_config_view_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//h2[@name='order']" position="after">
+                <field name='branch'/>
+            </xpath>
+
+        </field>
+    </record> -->
 </odoo>
