--- a/bidfood_custom/views/product_views.xml
+++ b/bidfood_custom/views/product_views.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
 
-    <record model="ir.ui.view" id="product_template_bidfoodstock_form_view">
+    <!--record model="ir.ui.view" id="product_template_bidfoodstock_form_view">
         <field name="name">product.template.bidfood</field>
         <field name="model">product.template</field>
         <field name="inherit_id" ref="product.product_template_form_view"/>
@@ -20,7 +20,20 @@
             </xpath>
 
         </field>
-    </record>
+    </record-->
+    
+    
+      <record id="res_company_form_bidfood" model="ir.ui.view">
+            <field name="name">res.company.form.inherit.bidfood</field>
+            <field name="model">res.company</field>
+            <field name="inherit_id" ref="base.view_company_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='vat']" position="after">
+                    <field name="branch"/>
+                    <field name="siteID"/>
+                </xpath>
+            </field>
+        </record>
 
     <record model="ir.ui.view" id="pos_order_bidfoodstock_form_view">
         <field name="name">pos.order.bidfood</field>
@@ -34,7 +47,7 @@
         </field>
     </record>
 
-    <record model="ir.ui.view" id="pos_config_branch_view">
+    <!--record model="ir.ui.view" id="pos_config_branch_view">
         <field name="name">pos.config.branch.view</field>
         <field name="model">pos.config</field>
         <field name="inherit_id" ref="point_of_sale.pos_config_view_form"/>
@@ -47,7 +60,7 @@
             </xpath>
 
         </field>
-    </record>
+    </record-->
 
     <!-- <record model="ir.ui.view" id="pos_session_branch_view">
         <field name="name">pos.session.branch.view</field>
