--- a/bidfood_custom/views/product_views.xml
+++ b/bidfood_custom/views/product_views.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
 
-    <record model="ir.ui.view" id="product_template_bidfoodstock_form_view">
+    <!-- <record model="ir.ui.view" id="product_template_bidfoodstock_form_view">
         <field name="name">product.template.bidfood</field>
         <field name="model">product.template</field>
         <field name="inherit_id" ref="product.product_template_form_view"/>
@@ -21,7 +21,7 @@
             </xpath>
 
         </field>
-    </record> 
+    </record> -->
     
     
       <record id="res_company_form_bidfood" model="ir.ui.view">
@@ -48,7 +48,7 @@
         </field>
     </record>
 
-    <record model="ir.ui.view" id="pos_config_branch_view">
+    <!--record model="ir.ui.view" id="pos_config_branch_view">
         <field name="name">pos.config.branch.view</field>
         <field name="model">pos.config</field>
         <field name="inherit_id" ref="point_of_sale.pos_config_view_form"/>
@@ -57,12 +57,11 @@
                 <div class="oe_title" id="branch">
                     <label for="branch"/>
                     <field name='branch' placeholder="Branch Name"/>
-
                 </div>
             </xpath>
 
         </field>
-    </record>
+    </record-->
 
     <!-- <record model="ir.ui.view" id="pos_session_branch_view">
         <field name="name">pos.session.branch.view</field>
