Remove siteId Field

--- a/bidfood_custom/views/product_views.xml
+++ b/bidfood_custom/views/product_views.xml
@@ -31,7 +31,7 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='vat']" position="after">
                     <field name="branch"/>
-                    <field name="siteid"/>
+                    <!-- <field name="siteid"/> -->
                 </xpath>
             </field>
         </record>
