Add pos changes

--- a/bidfood_custom/views/product_views.xml
+++ b/bidfood_custom/views/product_views.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
 
-    <record model="ir.ui.view" id="product_template_bidfoodstock_form_view">
+    <!-- <record model="ir.ui.view" id="product_template_bidfoodstock_form_view">
         <field name="name">product.template.bidfood</field>
         <field name="model">product.template</field>
         <field name="inherit_id" ref="product.product_template_form_view"/>
@@ -12,13 +12,70 @@
                 <page name="BidFood  Details" string="BidFood ">
                     <group >
                         <field name="gp_unit" />
+                        <field name="creation_date" />
+                        <field name="modify_date" />
+                        <field name="branch" />
+                         <field name="siteid" />
                     </group>
                 </page>
             </xpath>
 
         </field>
+    </record> -->
+    
+    
+      <record id="res_company_form_bidfood" model="ir.ui.view">
+            <field name="name">res.company.form.inherit.bidfood</field>
+            <field name="model">res.company</field>
+            <field name="inherit_id" ref="base.view_company_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='vat']" position="after">
+                    <field name="branch"/>
+                    <!-- <field name="siteid"/> -->
+                </xpath>
+            </field>
+        </record>
+
+    <record model="ir.ui.view" id="pos_order_bidfoodstock_form_view">
+        <field name="name">pos.order.bidfood</field>
+        <field name="model">pos.order</field>
+        <field name="inherit_id" ref="point_of_sale.view_pos_pos_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//group[@name='order_fields']//field[@name='fiscal_position_id']" position="after">
+                <field name='invoiceNumber'/>
+            </xpath>
+
+        </field>
     </record>
 
-   
-     
+    <record model="ir.ui.view" id="pos_config_branch_view">
+        <field name="name">pos.config.branch.view</field>
+        <field name="model">pos.config</field>
+        <field name="inherit_id" ref="point_of_sale.pos_config_view_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//div[@id='title']" position="after">
+                <div class="oe_title" id="branch">
+                    <label for="branch"/>
+                    <field name='branch'/>
+                </div>
+                <div class="oe_title" id="site_id">
+                    <label for="site_id"/>
+                    <field name='site_id'/>
+                </div>
+            </xpath>
+
+        </field>
+    </record>
+
+    <!-- <record model="ir.ui.view" id="pos_session_branch_view">
+        <field name="name">pos.session.branch.view</field>
+        <field name="model">pos.session</field>
+        <field name="inherit_id" ref="point_of_sale.pos_config_view_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//h2[@name='order']" position="after">
+                <field name='branch'/>
+            </xpath>
+
+        </field>
+    </record> -->
 </odoo>
