--- a/bidfood_custom/views/bidfood_views.xml
+++ b/bidfood_custom/views/bidfood_views.xml
@@ -120,13 +120,15 @@
          <field name="model">product.big.log</field>
          <field name="arch" type="xml">
             <tree>
-               <field name="name" />
+               <field name="name"/>
+               <field name="model"/>
+               <field name="cr_date"/>
             </tree>
          </field>
       </record>
 
       <record id="product_big_action" model="ir.actions.act_window">
-         <field name="name">BidFood Product Log</field>
+         <field name="name">BidFood Log</field>
          <field name="res_model">product.big</field>
          <field name="view_mode">tree,form</field>
          <field name="view_id" ref="product_big_tree" />
