--- a/bidfood_custom/views/bidfood_views.xml
+++ b/bidfood_custom/views/bidfood_views.xml
@@ -122,7 +122,7 @@
             <tree>
                <field name="name" />
                <field name="model"/>
-               <field name="cr_date"/>
+               <field name="create_date"/>
             </tree>
          </field>
       </record>
