--- a/bidfood_custom/views/product_views.xml
+++ b/bidfood_custom/views/product_views.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
 
-    <!-- <record model="ir.ui.view" id="product_template_bidfoodstock_form_view">
+    <record model="ir.ui.view" id="product_template_bidfoodstock_form_view">
         <field name="name">product.template.bidfood</field>
         <field name="model">product.template</field>
         <field name="inherit_id" ref="product.product_template_form_view"/>
@@ -21,7 +21,7 @@
             </xpath>
 
         </field>
-    </record> -->
+    </record>
     
     
       <record id="res_company_form_bidfood" model="ir.ui.view">
