Fix duplicate order issue

--- a/bidfood_custom/views/bidfood_views.xml
+++ b/bidfood_custom/views/bidfood_views.xml
@@ -55,7 +55,7 @@
                   <group>
                      <field name="name"/>
                      <field name="payload"/>
-                     <field name="model"/>
+                     <field name="log_model"/>
                      <field name="error"/>
                      <field name="ttype"/>
                      <field name="etype"/>
@@ -73,7 +73,7 @@
             <tree>
                <field name="name" />
                <field name="payload"/>
-               <field name="model"/>
+               <field name="log_model"/>
                <field name="error"/>
             </tree>
          </field>
@@ -101,7 +101,7 @@
                            <tree>
                               <field name="name"/>
                               <field name="payload"/>
-                              <field name="model"/>
+                              <field name="log_model"/>
                               <field name="error"/>
                               <field name="ttype"/>
                               <field name="etype"/>
@@ -121,7 +121,7 @@
          <field name="arch" type="xml">
             <tree create="false">
                <field name="name"/>
-               <field name="model"/>
+               <field name="log_model"/>
                <field name="create_date"/>
             </tree>
          </field>
