--- a/bidfood_custom/views/product_views.xml
+++ b/bidfood_custom/views/product_views.xml
@@ -43,6 +43,7 @@
         <field name="arch" type="xml">
             <xpath expr="//group[@name='order_fields']//field[@name='fiscal_position_id']" position="after">
                 <field name='invoiceNumber'/>
+                <field name='gp_unit_success'/>
             </xpath>
 
         </field>
