--- a/pos_iveri_15/views/pos_config_views.xml
+++ b/pos_iveri_15/views/pos_config_views.xml
@@ -2,10 +2,10 @@
 <odoo>
     <record id="pos_config_view_form" model="ir.ui.view">
         <field name="name">pos.config.form.view.inherit.pos_adyen</field>
-        <field name="model">res.config.settings</field>
-        <field name="inherit_id" ref="point_of_sale.res_config_settings_view_form"/>
+        <field name="model">pos.config</field>
+        <field name="inherit_id" ref="point_of_sale.pos_config_view_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//div[@id='pos_payment_section']/.." position="after">
+            <xpath expr="//div[@id='payment_methods_new']/.." position="after">
                 <h2>Adyen</h2>
                 <div class="row mt16 o_settings_container" id="adyen">
                     <div class="col-12 col-lg-6 o_setting_box">
@@ -20,6 +20,16 @@
                         </div>
                     </div>
                 </div>
+            </xpath>
+        </field>
+    </record>
+     <record id="view_pos_pos_form_inherit" model="ir.ui.view">
+        <field name="name">pos.order.form.inherit</field>
+        <field name="model">pos.order</field>
+        <field name="inherit_id" ref="point_of_sale.view_pos_pos_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//notebook//page[@name='extra']//group//group//field[@name='company_id']" position="after">
+                <field name='refund_order'/>
             </xpath>
         </field>
     </record>
